update globals.scss: remove styles of dark mode to solve the problem with some svg images which are displayed incorrect in dark mode

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -26,8 +26,9 @@ a {
   @include link;
 }
 
-@media (prefers-color-scheme: dark) {
+// comment the following lines to solve the problem with some svg images which are displayed incorrect in dark mode
+/*@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+}*/
